Fixed title spacing and removed an extra colon.

--- a/css/resume.css
+++ b/css/resume.css
@@ -21,6 +21,10 @@ p{
     clear:both;
 }
 
+.head, .education, .projects,
+.work-experience {
+    margin-bottom: 10px;
+}
 
 .education-detail, .work-experience-detail {
     display: flex;
